; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_cmd3.c_elsecmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_cmd3.c_elsecmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cond = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"\22Else\22 without matching \22if\22\0A\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"Mail's idea of conditions is screwed up\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @elsecmd() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @cond, align 4
  switch i32 %2, label %7 [
    i32 130, label %3
    i32 128, label %5
    i32 129, label %6
  ]

3:                                                ; preds = %0
  %4 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %10

5:                                                ; preds = %0
  store i32 129, i32* @cond, align 4
  br label %9

6:                                                ; preds = %0
  store i32 128, i32* @cond, align 4
  br label %9

7:                                                ; preds = %0
  %8 = call i32 @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  store i32 130, i32* @cond, align 4
  br label %9

9:                                                ; preds = %7, %6, %5
  store i32 0, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %3
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
